[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-pms-software-gestion-malaga.html
+++ b/test-pms-software-gestion-malaga.html
@@ -141,34 +141,38 @@
 </header>
   <main>
     <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
-<p>En el competitivo mercado de alquileres vacacionales en Málaga, contar con un sistema de gestión eficiente es fundamental. Un PMS (Property Management System) permite a los propietarios gestionar reservas, habitaciones y procesos administrativos de manera profesional. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas optimizar la gestión de tu alquiler vacacional y ofrecer una experiencia excepcional a tus huéspedes.</p>
+<p>Si eres propietario de un alquiler vacacional en Málaga, sabrás que la gestión eficiente de tu propiedad es crucial para maximizar tus ingresos y ofrecer una experiencia excepcional a tus huéspedes. Un Sistema de Gestión de Propiedades (PMS) es una herramienta esencial que facilita la administración de reservas, habitaciones y más. En este momento, <strong>estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional</strong>.</p>
 <h2>¿Qué es un PMS (Property Management System)?</h2>
-<p>Un PMS es una herramienta integral que ayuda a los propietarios y administradores de propiedades a gestionar todos los aspectos de sus alquileres vacacionales. Incluye funcionalidades como la gestión de reservas, la asignación de habitaciones, el check-in digital y la facturación. Con nuestro PMS de gestión en la nube, tendrás acceso a todas estas herramientas y más, facilitando así la administración de tu propiedad.</p>
+<p>Un PMS o Sistema de Gestión de Propiedades es un software diseñado para ayudar a los propietarios y administradores de inmuebles a gestionar sus operaciones diarias. Incluye funcionalidades como la gestión de reservas, check-in digital, facturación y mucho más. <strong>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong>, lo que te permitirá llevar un control exhaustivo de tu negocio de alquiler vacacional sin complicaciones.</p>
 <h2>Funcionalidades que Incluirá Nuestro PMS</h2>
-<p>Estamos diseñando un PMS que cubra todas las necesidades de un alquiler vacacional en Málaga. Algunas de las funcionalidades clave que incluirá son:</p>
+<p>La eficiencia de un PMS radica en sus funcionalidades. Nuestro sistema incluirá:</p>
 <ul>
-<li><strong>Gestión completa de reservas y calendario</strong>: Visualiza y organiza tus reservas de forma sencilla.</li>
-<li><strong>Check-in digital y cumplimiento normativo (RD 933)</strong>: Facilita el proceso de llegada de los huéspedes y asegúrate de cumplir con la normativa local.</li>
-<li><strong>Microsite de reservas directas sin comisiones</strong>: Ofrece a tus clientes una forma directa de reservar sin fees adicionales.</li>
-<li><strong>Facturación automática</strong>: Genera y envía facturas de manera automática y eficiente.</li>
-<li><strong>Gestión de múltiples propiedades</strong>: Administra varias propiedades desde una única plataforma.</li>
-<li><strong>App móvil para gestión desde cualquier lugar</strong>: Maneja tu negocio mientras estás en movimiento.</li>
-<li><strong>Y mucho más...</strong>: Nuestro PMS se adaptará a tus necesidades específicas.</li>
+<li><strong>Gestión completa de reservas y calendario</strong>: Sincronización automática de reservas en tiempo real.</li>
+<li><strong>Check-in digital y cumplimiento normativo (RD 933)</strong>: Facilita el proceso de registro y asegura que cumples con la normativa vigente.</li>
+<li><strong>Microsite de reservas directas sin comisiones</strong>: Aumenta tus ganancias al eliminar intermediarios.</li>
+<li><strong>Facturación automática</strong>: Generación de facturas de manera sencilla y rápida.</li>
+<li><strong>Gestión de múltiples propiedades</strong>: Ideal si tienes más de un alquiler vacacional.</li>
+<li><strong>App móvil para gestión desde cualquier lugar</strong>: Controla tu propiedad desde la palma de tu mano.</li>
+<li><strong>Y mucho más...</strong></li>
 </ul>
 <h2>Por Qué Necesitas un PMS Profesional</h2>
-<p>La normativa RD 933 es una de las regulaciones que afectan a los alquileres vacacionales en Málaga. Muchos propietarios enfrentan desafíos para cumplir con estas regulaciones, lo que puede resultar en sanciones y pérdida de ingresos. Un PMS profesional no solo facilita el cumplimiento normativo, sino que también optimiza la gestión diaria, permitiéndote centrarte en ofrecer un excelente servicio a tus huéspedes. Con nuestro PMS en la nube, podrás resolver estos problemas de manera eficaz.</p>
+<p>La gestión de propiedades vacacionales en Málaga no es solo una cuestión de disponibilidad; también implica cumplir con normativas locales como el RD 933, que establece requisitos específicos para el registro de huéspedes. Por ejemplo, muchos propietarios han enfrentado sanciones por no cumplir con estos requerimientos. Un PMS profesional te ayudará a evitar problemas legales y a optimizar el proceso de gestión, asegurando que tu negocio funcione sin contratiempos. <strong>Nuestro PMS en la nube será tu aliado perfecto para resolver estos problemas.</strong></p>
 <h2>Estamos Diseñando el PMS Completo en la Nube</h2>
-<p>Nos complace anunciar que estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional. Al unirte a nuestra lista de espera, serás uno de los primeros en acceder a esta innovadora herramienta, junto con beneficios especiales y acceso prioritario. No pierdas la oportunidad de transformar la forma en que gestionas tu propiedad.</p>
+<p>Estamos emocionados de anunciar que <strong>estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong> para que puedas llevar tu alquiler vacacional al siguiente nivel. Los primeros en apuntarse a nuestra lista de espera tendrán acceso prioritario y recibirán beneficios especiales. No pierdas la oportunidad de ser uno de los primeros en disfrutar de esta herramienta innovadora.</p>
 <h2>Preguntas frecuentes sobre PMS</h2>
-<p><strong>1. ¿Qué es un PMS y cómo puede ayudarme?</strong><br>Un PMS es un sistema que centraliza la gestión de reservas, facturación y operaciones de tus alquileres vacacionales. Ayuda a optimizar procesos y asegurar el cumplimiento normativo.</p>
-<p><strong>2. ¿Cuándo lanzarán el PMS?</strong><br>Estamos trabajando arduamente en el desarrollo del PMS y esperamos lanzarlo en los próximos meses. Únete a nuestra lista de espera para recibir actualizaciones.</p>
-<p><strong>3. ¿Qué funcionalidades incluirá el PMS?</strong><br>Nuestro PMS incluirá gestión de reservas, check-in digital, facturación automática, y mucho más, todo diseñado para satisfacer las necesidades de los propietarios en Málaga.</p>
-<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Puedes unirte a nuestra lista de espera a través del formulario en nuestro sitio web. ¡No te lo pierdas!</p>
+<h3>¿Qué es un PMS?</h3>
+<p>Un PMS es un software que ayuda a gestionar las operaciones diarias de las propiedades vacacionales, como reservas, facturación y cumplimiento normativo.</p>
+<h3>¿Cuándo se lanzará el PMS?</h3>
+<p>Estamos trabajando arduamente para lanzar nuestra plataforma en los próximos meses. Asegúrate de unirte a nuestra lista de espera para recibir actualizaciones.</p>
+<h3>¿Qué incluirá el PMS?</h3>
+<p>Incluirá gestión de reservas, facturación automática, check-in digital, entre otras funcionalidades diseñadas para facilitar la gestión de tu alquiler vacacional.</p>
+<h3>¿Cómo puedo apuntarme a la lista de espera?</h3>
+<p>Simplemente visita nuestro sitio web y completa el formulario para ser uno de los primeros en acceder a nuestro PMS.</p>
 <h2>Datos locales útiles</h2>
 <ul>
-<li><strong>Turismo Málaga</strong>: La oficina de turismo de Málaga ofrece información y recursos para propietarios de alquileres vacacionales. Visita <a href="https://www.turismo.malaga.eu">Turismo Málaga</a>.</li>
-<li><strong>Reglamento de Alquileres Vacacionales</strong>: Conoce las normativas locales que afectan a los alquileres en Málaga en la <a href="https://www.malaga.eu/">web del Ayuntamiento de Málaga</a>.</li>
-<li><strong>Asociación de Empresarios de Alojamientos de Málaga (AEHM)</strong>: Una gran fuente de apoyo y recursos para propietarios de alquileres vacacionales. Más información en <a href="https://www.aehm.es">AEHM</a>.</li>
+<li><strong>Ley de Arrendamientos Urbanos en Andalucía</strong>: Es fundamental que los propietarios de alquileres vacacionales conozcan la normativa local para evitar problemas legales.</li>
+<li><strong>Agencia de Turismo de Málaga</strong>: Ofrece recursos y guías sobre cómo gestionar propiedades en la región.</li>
+<li><strong>Asociación de Propietarios de Alquileres Vacacionales de Málaga</strong>: Un recurso valioso para conectarte con otros propietarios y compartir experiencias.</li>
 </ul>
 
     
