[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-pms-software-gestion-malaga-2.html
+++ b/test-pms-software-gestion-malaga-2.html
@@ -140,94 +140,36 @@
   </div>
 </header>
   <main>
-    <pre><code class="language-markdown">---
-title: &quot;PMS y Software de Gestión Hotelera en Málaga | Lista de Espera&quot;
-slug: &quot;pms-software-gestion-Málaga&quot;
-intent: &quot;informational_to_lead&quot;
-region: &quot;Andalucía&quot;
-city: &quot;Málaga&quot;
-canonical: &quot;/pms-software-gestion-Málaga&quot;
-draft: false
----
-
-&lt;meta-title&gt;PMS y Software de Gestión Hotelera en Málaga | Lista de Espera&lt;/meta-title&gt;
-&lt;meta-description&gt;Estamos diseñando el PMS de gestión en la nube con todo lo que necesitas para gestionar tu alquiler vacacional. Únete a la lista de espera y sé de los primeros en acceder.&lt;/meta-description&gt;
-
-# PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas
-
-En el competitivo mundo de los alquileres vacacionales en Málaga, un sistema de gestión de propiedades (PMS) se convierte en una herramienta esencial para propietarios y administradores. Este software optimiza la gestión de reservas, facilita la comunicación con los huéspedes y asegura el cumplimiento de normativas locales, como el RD 933. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas gestionar tu alquiler vacacional de forma profesional y eficaz.
-
-## ¿Qué es un PMS (Property Management System)?
-
-Un PMS, o sistema de gestión de propiedades, es un software diseñado para ayudar a los propietarios y administradores de alquileres vacacionales a gestionar su negocio de manera eficiente. Permite centralizar la información de reservas, clientes y propiedades, facilitando tareas como el check-in digital, la facturación y la gestión de múltiples propiedades. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para que puedas optimizar el proceso de gestión y mejorar la experiencia de tus huéspedes.
-
-## Funcionalidades que Incluirá Nuestro PMS
-
-Nuestro PMS en desarrollo incluirá una serie de funcionalidades clave para facilitar la gestión de tu alquiler vacacional:
-
-- **Gestión completa de reservas y calendario**: Sincroniza todas tus reservas en un solo lugar.
-- **Check-in digital y cumplimiento normativo (RD 933)**: Facilita el registro de huéspedes y asegura el cumplimiento de las normativas locales.
-- **Microsite de reservas directas sin comisiones**: Aumenta tus ingresos evitando comisiones de plataformas de terceros.
-- **Facturación automática**: Genera facturas sin esfuerzo y ahorra tiempo en la gestión administrativa.
-- **Gestión de múltiples propiedades**: Administra diferentes alquileres desde una única plataforma.
-- **App móvil para gestión desde cualquier lugar**: Controla tu negocio en cualquier momento y lugar.
-- **Y mucho más...**: Otras funcionalidades innovadoras que irán surgiendo.
-
-## Por Qué Necesitas un PMS Profesional
-
-El cumplimiento normativo es un aspecto crucial para los propietarios de alquileres vacacionales en Málaga. La normativa RD 933 establece requisitos específicos para garantizar la calidad y la seguridad en los alojamientos turísticos. Sin un PMS adecuado, podrías enfrentarte a problemas de gestión y sanciones. Nuestro PMS en la nube está diseñado para resolver estos problemas, asegurando que cumplas con todas las regulaciones y ofreciendo una experiencia excepcional a tus huéspedes.
-
-## Estamos Diseñando el PMS Completo en la Nube
-
-Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para la gestión profesional de alquileres vacacionales. Aquellos que se apunten a nuestra lista de espera tendrán acceso prioritario a la plataforma y disfrutarán de beneficios especiales. No pierdas la oportunidad de ser uno de los primeros en acceder a este innovador sistema de gestión.
-
-## Preguntas frecuentes sobre PMS
-
-**¿Qué es un PMS?**  
-Un PMS es un software que ayuda a gestionar alquileres vacacionales, centralizando reservas, clientes y propiedades.
-
-**¿Cuándo lanzaremos el PMS?**  
-Estamos en proceso de desarrollo y esperamos lanzar la plataforma pronto. Inscríbete en nuestra lista de espera para estar al tanto.
-
-**¿Qué incluirá el PMS?**  
-Incluirá funcionalidades como gestión de reservas, check-in digital, facturación automática y mucho más.
-
-**¿Cómo puedo apuntarme a la lista de espera?**  
-Simplemente visita nuestra página web y completa el formulario de inscripción para ser uno de los primeros en acceder a nuestro PMS.
-
-## Datos locales útiles
-
-- **Turismo de Málaga**: Es importante conocer las normativas locales sobre alquileres vacacionales, disponibles en el sitio web de Turismo de Málaga.
-- **Asociación de Alquileres Vacacionales de Andalucía (AAVV)**: Esta asociación proporciona información y recursos para propietarios de alojamientos turísticos en la región.
-- **Registro de Turismo de Andalucía**: Asegúrate de que tu propiedad esté registrada y cumpla con los requisitos para evitar sanciones.
-
-&lt;schema&gt;
-{
-  &quot;@context&quot;: &quot;https://schema.org&quot;,
-  &quot;@type&quot;: &quot;WebPage&quot;,
-  &quot;name&quot;: &quot;PMS y Software de Gestión Hotelera en Málaga&quot;,
-  &quot;description&quot;: &quot;Estamos diseñando el PMS de gestión en la nube con todo lo que necesitas para gestionar tu alquiler vacacional. Únete a la lista de espera.&quot;,
-  &quot;url&quot;: &quot;https://tu-sitio-web.com/pms-software-gestion-Málaga&quot;,
-  &quot;mainEntity&quot;: {
-    &quot;@type&quot;: &quot;SoftwareApplication&quot;,
-    &quot;name&quot;: &quot;PMS de Gestión en la Nube&quot;,
-    &quot;operatingSystem&quot;: &quot;Cloud&quot;,
-    &quot;applicationCategory&quot;: &quot;BusinessApplication&quot;,
-    &quot;description&quot;: &quot;Un software completo para la gestión de alquileres vacacionales en Málaga.&quot;
-  },
-  &quot;publisher&quot;: {
-    &quot;@type&quot;: &quot;Organization&quot;,
-    &quot;name&quot;: &quot;Tu Empresa&quot;,
-    &quot;url&quot;: &quot;https://tu-sitio-web.com&quot;,
-    &quot;logo&quot;: {
-      &quot;@type&quot;: &quot;ImageObject&quot;,
-      &quot;url&quot;: &quot;https://tu-sitio-web.com/logo.png&quot;
-    }
-  }
-}
-&lt;/schema&gt;
-</code></pre>
-<p>Este artículo está diseñado para ser informativo y atractivo para los propietarios de alquileres vacacionales en Málaga, al mismo tiempo que los guía hacia la lista de espera de nuestro PMS en desarrollo.</p>
+    <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
+<p>La gestión de alquileres vacacionales en Málaga puede ser una tarea compleja, especialmente si se carece de las herramientas adecuadas. Un Property Management System (PMS) es fundamental para simplificar esta labor, permitiendo a los propietarios y gestores optimizar la administración de sus propiedades. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas gestionar tu alquiler vacacional de forma profesional y eficiente.</p>
+<h2>¿Qué es un PMS (Property Management System)?</h2>
+<p>Un PMS, o sistema de gestión de propiedades, es una plataforma que permite a los propietarios y administradores de alquileres vacacionales gestionar diversas operaciones desde un único lugar. Incluye funcionalidades clave como la gestión de reservas, la administración de habitaciones, el check-in digital, y la facturación. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para facilitar estas tareas, asegurando que los propietarios de alquileres en Málaga cuenten con una herramienta integral que se adapte a sus necesidades.</p>
+<h2>Funcionalidades que Incluirá Nuestro PMS</h2>
+<p>Nuestro PMS está diseñado para ofrecer una solución completa para la gestión de alquileres vacacionales. Algunas de las funcionalidades clave que incluirá son:</p>
+<ul>
+<li><strong>Gestión completa de reservas y calendario:</strong> Visualiza y gestiona todas tus reservas en un solo lugar.</li>
+<li><strong>Check-in digital y cumplimiento normativo (RD 933):</strong> Facilita el proceso de entrada de huéspedes cumpliendo con las normativas locales.</li>
+<li><strong>Microsite de reservas directas sin comisiones:</strong> Aumenta tus ingresos al permitir a los huéspedes reservar directamente.</li>
+<li><strong>Facturación automática:</strong> Genera y envía facturas de forma automática a tus huéspedes.</li>
+<li><strong>Gestión de múltiples propiedades:</strong> Administra diferentes propiedades desde una única plataforma.</li>
+<li><strong>App móvil para gestión desde cualquier lugar:</strong> Lleva la gestión en tu bolsillo, de forma práctica y accesible.</li>
+<li><strong>Y mucho más...</strong> Adaptamos nuestro servicio a las necesidades específicas de cada cliente.</li>
+</ul>
+<h2>Por Qué Necesitas un PMS Profesional</h2>
+<p>En Málaga, el cumplimiento normativo es crucial para la operación de alquileres vacacionales. La normativa RD 933 exige que los propietarios cumplan con ciertos requisitos para evitar sanciones. Un PMS profesional no solo facilita el cumplimiento de estas normativas, sino que también ayuda a los propietarios a optimizar su tiempo y recursos. Por ejemplo, un propietario que utiliza un PMS puede asegurarse de que todos los registros de sus huéspedes estén actualizados y cumplan con las exigencias legales, evitando problemas futuros. Nuestro PMS en la nube resolverá estos problemas y te dará tranquilidad.</p>
+<h2>Estamos Diseñando el PMS Completo en la Nube</h2>
+<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional. Los primeros en apuntarse a nuestra lista de espera tendrán acceso prioritario y beneficios especiales. Te invitamos a unirte a esta lista para ser uno de los primeros en conocer todas las funcionalidades y ventajas que nuestro PMS ofrecerá.</p>
+<h2>Preguntas frecuentes sobre PMS</h2>
+<p><strong>¿Qué es un PMS?</strong><br>Un PMS es un sistema que permite a los propietarios y gestores de alquileres vacacionales administrar y optimizar sus propiedades desde una única plataforma.</p>
+<p><strong>¿Cuándo se lanzará el PMS?</strong><br>Estamos trabajando arduamente para lanzar el PMS en el próximo semestre. Al apuntarte a la lista de espera, recibirás actualizaciones sobre la fecha de lanzamiento.</p>
+<p><strong>¿Qué incluirá el PMS?</strong><br>Incluirá funcionalidades como gestión de reservas, facturación automática, cumplimiento normativo, y más.</p>
+<p><strong>¿Cómo puedo apuntarme a la lista de espera?</strong><br>Puedes apuntarte a la lista de espera a través de nuestro sitio web, donde recibirás información privilegiada sobre el lanzamiento y las características del PMS.</p>
+<h2>Datos locales útiles</h2>
+<ul>
+<li><strong>Ayuntamiento de Málaga:</strong> Proporciona información sobre las normativas locales para alquileres vacacionales y cómo cumplir con ellas.</li>
+<li><strong>Asociación de Hostelería de Málaga:</strong> Ofrece recursos y formación para propietarios de alquileres vacacionales y gestores de propiedades.</li>
+<li><strong>Turismo Costa del Sol:</strong> Una referencia clave para conocer el mercado de turismo en Málaga y las tendencias que afectan a los alquileres vacacionales.</li>
+</ul>
 
     
 <section id="registro" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
