[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-pms-software-gestion-malaga-1.html
+++ b/test-pms-software-gestion-malaga-1.html
@@ -141,39 +141,38 @@
 </header>
   <main>
     <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
-<p>Si eres propietario de un alquiler vacacional en Málaga, sabes lo complicado que puede ser gestionar reservas, check-ins y la normativa local. Aquí es donde entra en juego un PMS (Property Management System). Este software especializado es esencial para optimizar la gestión de tu propiedad, y estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas manejar tu alquiler de forma profesional.</p>
+<p>En Málaga, la gestión de alquileres vacacionales se ha vuelto una tarea cada vez más compleja y competitiva. Un sistema de gestión de propiedades (PMS) es esencial para los propietarios que buscan optimizar sus operaciones y maximizar sus ingresos. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas gestionar tu alquiler vacacional de forma profesional, facilitando la vida tanto a propietarios como a huéspedes.</p>
 <h2>¿Qué es un PMS (Property Management System)?</h2>
-<p>Un PMS, o sistema de gestión de propiedades, es una herramienta integral que permite a los propietarios de alquileres vacacionales gestionar todos los aspectos de su negocio desde un solo lugar. Esto incluye la gestión de reservas, el control de habitaciones, el check-in digital, la facturación y mucho más. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para facilitarte la vida y mejorar la experiencia de tus huéspedes.</p>
+<p>Un PMS, o sistema de gestión de propiedades, es una herramienta digital que permite a los propietarios y administradores de alquileres vacacionales gestionar sus reservas, habitaciones y operaciones diarias de manera eficiente. Desde la gestión de reservas hasta el check-in digital, un PMS integral es crucial para ofrecer una experiencia fluida al huésped y optimizar los procesos internos. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita: gestión de reservas, habitaciones, check-in digital, facturación, y mucho más.</p>
 <h2>Funcionalidades que Incluirá Nuestro PMS</h2>
-<p>Nuestro PMS estará diseñado específicamente para satisfacer las necesidades de los propietarios en Málaga. Algunas de las funcionalidades clave que incluirá son:</p>
+<p>Nuestro PMS está diseñado para cubrir todas las necesidades de los propietarios de alquileres vacacionales en Málaga. Algunas de las funcionalidades clave que incluirá son:</p>
 <ul>
-<li><strong>Gestión completa de reservas y calendario:</strong> Visualiza y gestiona todas tus reservas en un solo calendario.</li>
-<li><strong>Check-in digital y cumplimiento normativo (RD 933):</strong> Facilita el proceso de check-in y asegúrate de cumplir con la normativa local.</li>
-<li><strong>Microsite de reservas directas sin comisiones:</strong> Los huéspedes podrán reservar directamente a través de tu microsite, lo que te permitirá evitar comisiones de plataformas externas.</li>
-<li><strong>Facturación automática:</strong> Genera facturas de manera automática y evita errores manuales.</li>
-<li><strong>Gestión de múltiples propiedades:</strong> Si tienes varias propiedades, podrás gestionarlas todas desde una única plataforma.</li>
-<li><strong>App móvil para gestión desde cualquier lugar:</strong> Gestiona tu negocio desde cualquier lugar con nuestra app móvil.</li>
-<li><strong>Y mucho más...</strong></li>
+<li><strong>Gestión completa de reservas y calendario:</strong> Visualiza y organiza tus reservas en un solo lugar.</li>
+<li><strong>Check-in digital y cumplimiento normativo (RD 933):</strong> Facilita el proceso de check-in cumpliendo con la normativa vigente.</li>
+<li><strong>Microsite de reservas directas sin comisiones:</strong> Permite a los huéspedes reservar directamente, ahorrando en comisiones.</li>
+<li><strong>Facturación automática:</strong> Genera facturas de manera automática, ahorrando tiempo y esfuerzo.</li>
+<li><strong>Gestión de múltiples propiedades:</strong> Administra varias propiedades desde una única plataforma.</li>
+<li><strong>App móvil para gestión desde cualquier lugar:</strong> Mantente conectado y gestiona tus propiedades en cualquier momento y lugar.</li>
+<li><strong>Y mucho más...</strong> Nuestro objetivo es ofrecer un sistema robusto y flexible.</li>
 </ul>
 <h2>Por Qué Necesitas un PMS Profesional</h2>
-<p>Málaga es un destino turístico popular, lo que significa que la competencia es feroz. Un PMS profesional no solo te ayuda a gestionar tu propiedad de manera más eficiente, sino que también asegura que estés cumpliendo con la normativa local, como el RD 933, que regula los alquileres vacacionales en Andalucía. Muchos propietarios han enfrentado sanciones por no cumplir con estas normativas, pero con nuestro PMS en la nube, podrás asegurarte de que todo esté en orden.</p>
+<p>La normativa RD 933 en Málaga exige que los propietarios de alquileres vacacionales cumplan con ciertos requisitos legales. Esto incluye la correcta gestión de las reservas y la información de los huéspedes. Un PMS profesional no solo te ayudará a cumplir con estas regulaciones, sino que también te permitirá enfocarte en lo que realmente importa: brindar una excelente experiencia a tus huéspedes. Por ejemplo, muchos propietarios han enfrentado sanciones por no tener un sistema adecuado para gestionar sus reservas y datos, lo que subraya la necesidad de un PMS completo. </p>
 <h2>Estamos Diseñando el PMS Completo en la Nube</h2>
-<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para ayudarte a gestionar tu alquiler vacacional de forma profesional. Además, aquellos que se apunten a nuestra lista de espera tendrán acceso prioritario y beneficios especiales en el lanzamiento. No te pierdas la oportunidad de estar entre los primeros en acceder a esta herramienta revolucionaria.</p>
+<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional. Al apuntarte a nuestra lista de espera, no solo tendrás la oportunidad de ser uno de los primeros en acceder a este innovador sistema, sino que también recibirás beneficios especiales y acceso prioritario. ¡No te pierdas la oportunidad de transformar la gestión de tu propiedad!</p>
 <h2>Preguntas frecuentes sobre PMS</h2>
-<h3>1. ¿Qué es un PMS y cómo puede ayudarme?</h3>
-<p>Un PMS es un sistema que centraliza la gestión de reservas, facturación, y cumplimiento normativo, facilitando la administración de tu alquiler vacacional.</p>
-<h3>2. ¿Cuándo lanzarán el PMS?</h3>
-<p>Estamos trabajando arduamente para lanzarlo pronto. Los detalles específicos estarán disponibles para quienes se registren en nuestra lista de espera.</p>
-<h3>3. ¿Qué incluirá el PMS?</h3>
-<p>Nuestro PMS incluirá funcionalidades como gestión de reservas, facturación automática, check-in digital, y mucho más.</p>
-<h3>4. ¿Cómo puedo apuntarme a la lista de espera?</h3>
-<p>Puedes registrarte fácilmente en nuestra página web y serás notificado de todas las actualizaciones y lanzamientos.</p>
+<p><strong>1. ¿Qué es un PMS?</strong><br>Un PMS es un sistema que permite gestionar reservas, habitaciones y operaciones de alquiler vacacional de manera eficiente.</p>
+<p><strong>2. ¿Cuándo se lanzará el PMS?</strong><br>Estamos trabajando arduamente y esperamos lanzar el PMS en los próximos meses. ¡Apúntate a la lista de espera para recibir actualizaciones!</p>
+<p><strong>3. ¿Qué funcionalidades incluirá el PMS?</strong><br>Incluirá gestión de reservas, check-in digital, facturación automática, gestión de múltiples propiedades y mucho más.</p>
+<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Puedes apuntarte a la lista de espera a través de nuestro sitio web y ser el primero en recibir noticias sobre nuestro PMS.</p>
 <h2>Datos locales útiles</h2>
-<ul>
-<li><strong>Turismo de Málaga:</strong> La entidad local que regula y promueve el turismo en la ciudad. Puedes consultar su sitio web para obtener información sobre normativas vigentes.</li>
-<li><strong>Ayuntamiento de Málaga:</strong> Aquí encontrarás información sobre las regulaciones de alquileres vacacionales y el cumplimiento de la normativa RD 933.</li>
-<li><strong>Asociación de Alquileres Vacacionales de Andalucía:</strong> Una organización que ofrece recursos y apoyo a propietarios de alquileres vacacionales en la región.</li>
-</ul>
+<ol>
+<li><p><strong>Ayuntamiento de Málaga:</strong> Proporciona información sobre las regulaciones de alquileres vacacionales en la ciudad. Puedes consultar su normativa en <a href="https://www.malaga.eu">Málaga Ayuntamiento</a>.</p>
+</li>
+<li><p><strong>Asociación de Alquileres Vacacionales de Málaga:</strong> Recursos y apoyo para propietarios que buscan cumplir con la normativa y mejorar su gestión.</p>
+</li>
+<li><p><strong>Turismo Costa del Sol:</strong> Información sobre la promoción y gestión de alojamientos turísticos en la región, que puede ser útil para propietarios interesados en atraer más huéspedes.</p>
+</li>
+</ol>
 
     
 <section id="registro" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
